--- a/Lab-1-LSH/LocalitySensitiveHashing.ipynb
+++ b/Lab-1-LSH/LocalitySensitiveHashing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/danmontesi/Desktop/Data-Mining-KTH\n"
+      "/home/strenuus/dev/Data-Mining-KTH/Lab-1-LSH\n"
      ]
     }
    ],
@@ -121,22 +121,24 @@
     "    def __init__(self, vector):\n",
     "        self.vector = vector\n",
     "\n",
-    "n = 1000\n",
-    "coefficient = np.random.randint(2 ** 32 - 1, size=n)\n",
-    "bias = np.random.randint(2 ** 32 - 1, size=n)\n",
-    "mod = np.ones(n) * 2 ** 32 - 1\n",
-    "\n",
-    "def hashValue(value, signature):\n",
-    "    return (value * coefficient[signature] + bias[signature]) % mod[signature]\n",
-    "\n",
-    "def hashVector(vector, signature):\n",
-    "    return np.vectorize(hashValue)(vector, signature)\n",
-    "\n",
-    "def minHashVector(signature, vectorWrapper):\n",
-    "    return np.amin(hashVector(vectorWrapper.vector, signature))\n",
-    "\n",
-    "def MinHashing(vector):\n",
-    "    return np.vectorize(minHashVector)(np.arange(n), VectorWrapper(vector))"
+    "class Hasher():\n",
+    "    def __init__(self, signatures):\n",
+    "        self.signatures = signatures\n",
+    "        self.coefficient = np.random.randint(2**32-1, size=self.signatures)\n",
+    "        self.bias = np.random.randint(2**32-1, size=self.signatures)\n",
+    "        self.mod = np.ones(self.signatures)*2**32-1#np.random.randint(10000, size=self.signatures)\n",
+    "        \n",
+    "    def hashValue(self, value, signature):\n",
+    "        return (value*self.coefficient[signature]+self.bias[signature])%self.mod[signature]\n",
+    "    \n",
+    "    def hashVector(self, vector, signature):\n",
+    "        return np.vectorize(self.hashValue)(vector, signature)\n",
+    "    \n",
+    "    def minHashVector(self, signature, vectorWrapper):\n",
+    "        return np.amin(self.hashVector(vectorWrapper.vector, signature))\n",
+    "    \n",
+    "    def generateSignatures(self, vector):\n",
+    "        return np.vectorize(self.minHashVector)(np.arange(self.signatures), VectorWrapper(vector))"
    ]
   },
   {
@@ -157,7 +159,7 @@
     "\n",
     "    union = a.union(b)\n",
     "    intersection = a.intersection(b)\n",
-    "    print(\"Similarity between the 2 sets is \" + str(round(len(intersection)/len(union), 2)))\n"
+    "    return round(len(intersection)/len(union), 2)\n"
    ]
   },
   {
@@ -173,13 +175,12 @@
     "\n",
     "def getSimilarity(list1, list2):\n",
     "    comparison = np.dstack((list1, list2))[0]\n",
-    "    print(\"Similarity between the 2 vectors is \" + str(\n",
-    "    len(list(filter(lambda x: x[0] == x[1], comparison))) / len(comparison)))"
+    "    return len(list(filter(lambda x: x[0] == x[1], comparison))) / len(comparison)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,13 +195,13 @@
     "bands_num = 25\n",
     "signatures = 100\n",
     "doc_num = numberOfDocuments\n",
+    "hasher = Hasher(signatures)\n",
     "\n",
     "def vectorHash(vector):\n",
     "    \"\"\"\n",
     "    Computes an hash value given a vector\n",
-    "    :return: hashed value\n",
-    "    \"\"\"\n",
-    "    return np.sum(vector) % 2 ** 32 - 1\n",
+    "    :return: hashed value  \"\"\"\n",
+    "    return np.sum(vector) % (2 ** 32 - 1)\n",
     "\n",
     "def generateCandidates(vector):\n",
     "    \"\"\"\n",
@@ -218,13 +219,13 @@
     "        bands_num = 25,\n",
     "        signatures = 100,\n",
     "        doc_num = len(signatures_lists)):\n",
-    "\n",
+    "   \n",
     "    # Computer threshold from given bands_num and signatures\n",
     "    t = (1 / bands_num) ** (bands_num / signatures)\n",
     "    print(\"Threshold is set to \" + str(t))\n",
     "\n",
     "    # Generate signatures of a given list of integers\n",
-    "    min_hash_lists = signatures_lists.map(lambda x: (x[0], MinHashing(x[1])))\n",
+    "    min_hash_lists = signatures_lists.map(lambda x: (x[0], hasher.generateSignatures(x[1])))\n",
     "\n",
     "    # Create a tuples having as elements (bandId, (documentId, hashOverTheBand))\n",
     "    bands0 = min_hash_lists.flatMap(lambda x: np.arange(bands_num))\n",
@@ -237,8 +238,13 @@
     "    bandsInGroup = bands.groupByKey()\n",
     "\n",
     "    candidates = bandsInGroup.flatMap(lambda x: generateCandidates(x[1])).map(\n",
-    "        lambda x: (x[0] * len(doc_num) + x[1], x)).values().distinct()\n",
+    "        lambda x: (x[0] * doc_num + x[1], x)).values().distinct()\n",
     "    print(\"Candidates are: \" + str(candidates.collect()) )\n",
+    "    \n",
+    "    for couple in candidates.collect():\n",
+    "        first = min_hash_lists.filter(lambda x: x[0]==couple[0]).collect()[0][1]\n",
+    "        second = min_hash_lists.filter(lambda x: x[0]==couple[1]).collect()[0][1]\n",
+    "        print(\"Similarity between \"+str(couple[0])+\" and \"+str(couple[1])+\" is \"+str(getSimilarity(first, second)))\n",
     "\n",
     "\n",
     "\n"
@@ -246,21 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold is set to 0.4472135954999579\n",
-      "Candidates are: []\n"
+      "Threshold is set to 0.1414213562373095\n",
+      "Candidates are: [(4, 5), (8, 9), (2, 3)]\n",
+      "Similarity between 4 and 5 is 0.3\n",
+      "Similarity between 8 and 9 is 0.53\n",
+      "Similarity between 2 and 3 is 0.03\n"
      ]
     }
    ],
    "source": [
     "# Create class shinglings to convert document into shingles and then into number\n",
-    "shinglingSize = 3\n",
+    "shinglingSize = 9\n",
     "\n",
     "data = []\n",
     "for d in range(numberOfDocuments):\n",
@@ -279,7 +288,9 @@
     "dataRDD = sc.parallelize(data)\n",
     "dataWithIndex = dataRDD.zipWithIndex().map(lambda x: (x[1], x[0]))\n",
     "\n",
-    "LSH(dataWithIndex, 25, 100, numberOfDocuments)\n"
+    "\n",
+    "\n",
+    "LSH(dataWithIndex, 50, 100, numberOfDocuments)\n"
    ]
   },
   {
@@ -327,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
