--- a/Lab-1-LSH/LocalitySensitiveHashing.ipynb
+++ b/Lab-1-LSH/LocalitySensitiveHashing.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/strenuus/dev/Data-Mining-KTH/Lab-1-LSH\n"
+      "/Users/danmontesi/Desktop/Data-Mining-KTH/Lab-1-LSH\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,6 @@
     "finds all candidate pairs of signatures that agree on at least fraction t of their components.\n",
     "\"\"\"\n",
     "\n",
-    "signatures_lists = []\n",
     "bands_num = 25\n",
     "signatures = 100\n",
     "doc_num = numberOfDocuments\n",
@@ -207,7 +206,6 @@
     "    \"\"\"\n",
     "    Given a vector, states whether it is a candidate or not\n",
     "    \"\"\"\n",
-    "\n",
     "    candidates = []\n",
     "    for x in vector:\n",
     "        for y in vector:\n",
@@ -215,17 +213,36 @@
     "                candidates.append((x[0], y[0]))\n",
     "    return candidates\n",
     "\n",
-    "def LSH(signatures_lists,\n",
-    "        bands_num = 25,\n",
-    "        signatures = 100,\n",
-    "        doc_num = len(signatures_lists)):\n",
-    "   \n",
-    "    # Computer threshold from given bands_num and signatures\n",
-    "    t = (1 / bands_num) ** (bands_num / signatures)\n",
-    "    print(\"Threshold is set to \" + str(t))\n",
+    "\"\"\"\n",
+    "    ....\n",
+    "\"\"\"\n",
+    "def min_hashing(signature_lists, hasher):\n",
+    "    min_hash_lists = signature_lists.map(lambda x: (x[0], hasher.generateSignatures(x[1])))\n",
+    "    return min_hash_lists\n",
     "\n",
+    "\n",
+    "def LSH(signatures_lists, signatures = 100, doc_num = 10):\n",
+    "    \n",
+    "    # Computer threshold from given bands_num and signatures\n",
+    "    def getThreshold(signatures, bands_num):\n",
+    "        return np.round((1 / bands_num) ** (bands_num / signatures),4)\n",
+    "        \n",
+    "    possible_bands = []\n",
+    "    for i in range(1, signatures//2 +1):\n",
+    "        if signatures%i == 0:\n",
+    "            possible_bands.append(i)\n",
+    "            \n",
+    "    for i in range(len(possible_bands)):\n",
+    "        print(\"{}: {}\".format(i, getThreshold(signatures, possible_bands[i])))\n",
+    "    choice = int(input(\"Which threshold would you like to select? Please insert their index id:\") )\n",
+    "    # TODO catch errors\n",
+    "    \n",
+    "    bands_num = possible_bands[choice]\n",
+    "   \n",
+    "    print(\"Threshold is set to \" + str(getThreshold(signatures, bands_num)))\n",
     "    # Generate signatures of a given list of integers\n",
-    "    min_hash_lists = signatures_lists.map(lambda x: (x[0], hasher.generateSignatures(x[1])))\n",
+    "    \n",
+    "    min_hash_lists = min_hashing(signatures_lists, hasher)\n",
     "\n",
     "    # Create a tuples having as elements (bandId, (documentId, hashOverTheBand))\n",
     "    bands0 = min_hash_lists.flatMap(lambda x: np.arange(bands_num))\n",
@@ -245,31 +262,44 @@
     "        first = min_hash_lists.filter(lambda x: x[0]==couple[0]).collect()[0][1]\n",
     "        second = min_hash_lists.filter(lambda x: x[0]==couple[1]).collect()[0][1]\n",
     "        print(\"Similarity between \"+str(couple[0])+\" and \"+str(couple[1])+\" is \"+str(getSimilarity(first, second)))\n",
-    "\n",
-    "\n",
-    "\n"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold is set to 0.1414213562373095\n",
-      "Candidates are: [(4, 5), (8, 9), (2, 3)]\n",
-      "Similarity between 4 and 5 is 0.3\n",
-      "Similarity between 8 and 9 is 0.53\n",
-      "Similarity between 2 and 3 is 0.03\n"
+      "PythonRDD[52] at RDD at PythonRDD.scala:53\n",
+      "0: 1.0\n",
+      "1: 0.9862\n",
+      "2: 0.9461\n",
+      "3: 0.9227\n",
+      "4: 0.7943\n",
+      "5: 0.5493\n",
+      "6: 0.4472\n",
+      "7: 0.1414\n",
+      "Which threshold would you like to select? Please insert their index id:6\n",
+      "Threshold is set to 0.4472\n",
+      "Candidates are: [(8, 9)]\n",
+      "Similarity between 8 and 9 is 0.65\n"
      ]
     }
    ],
    "source": [
     "# Create class shinglings to convert document into shingles and then into number\n",
-    "shinglingSize = 9\n",
+    "shinglingSize = 7\n",
     "\n",
     "data = []\n",
     "for d in range(numberOfDocuments):\n",
@@ -288,31 +318,130 @@
     "dataRDD = sc.parallelize(data)\n",
     "dataWithIndex = dataRDD.zipWithIndex().map(lambda x: (x[1], x[0]))\n",
     "\n",
-    "\n",
-    "\n",
-    "LSH(dataWithIndex, 50, 100, numberOfDocuments)\n"
+    "LSH(dataWithIndex, 100, numberOfDocuments)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3 funzioni\n",
+    "\n",
+    "# data = [ [3214, 31431, 134134, ...], [...]]\n",
+    "\n",
+    "\"\"\"\n",
+    "    Computes the Jaccard Similarity for each document\n",
+    "    documents are already split in hash shingles and saved \n",
+    "    global vsriable data\n",
+    "\"\"\"\n",
+    "def jaccard_test():\n",
+    "    for i in range(len(data)):\n",
+    "        for j in range(i+1, len(data)):\n",
+    "            print(\"Jaccard similarity between document {} and {} is {}\".format(i, j, computeJaccard(data[i], data[j])))\n",
+    "    \n",
+    "\"\"\"\n",
+    "    Computes the MinHashing Similarity for each document\n",
+    "    global vsriable ...\n",
+    "    signatures_lists = datawithindex...\n",
+    "    \n",
+    "\"\"\"\n",
+    "def min_hashing_test(signatures_lists, min_hash_lists):\n",
+    "    \n",
+    "    for couple in signatures_lists.collect():\n",
+    "        first = min_hash_lists.filter(lambda x: x[0]==couple[0]).collect()[0]\n",
+    "        second = min_hash_lists.filter(lambda x: x[0]==couple[1]).collect()[0]\n",
+    "        print(\"Similarity between \"+str(couple[0])+\" and \"+str(couple[1])+\" is \"+str(getSimilarity(first, second)))\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "# min-hashing senza lsh con i 10 documenti\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaccard similarity between document 0 and 1 is 0.03\n",
+      "Jaccard similarity between document 0 and 2 is 0.03\n",
+      "Jaccard similarity between document 0 and 3 is 0.02\n",
+      "Jaccard similarity between document 0 and 4 is 0.01\n",
+      "Jaccard similarity between document 0 and 5 is 0.0\n",
+      "Jaccard similarity between document 0 and 6 is 0.0\n",
+      "Jaccard similarity between document 0 and 7 is 0.0\n",
+      "Jaccard similarity between document 0 and 8 is 0.0\n",
+      "Jaccard similarity between document 0 and 9 is 0.0\n",
+      "Jaccard similarity between document 1 and 2 is 0.03\n",
+      "Jaccard similarity between document 1 and 3 is 0.02\n",
+      "Jaccard similarity between document 1 and 4 is 0.03\n",
+      "Jaccard similarity between document 1 and 5 is 0.01\n",
+      "Jaccard similarity between document 1 and 6 is 0.01\n",
+      "Jaccard similarity between document 1 and 7 is 0.0\n",
+      "Jaccard similarity between document 1 and 8 is 0.0\n",
+      "Jaccard similarity between document 1 and 9 is 0.0\n",
+      "Jaccard similarity between document 2 and 3 is 0.01\n",
+      "Jaccard similarity between document 2 and 4 is 0.01\n",
+      "Jaccard similarity between document 2 and 5 is 0.0\n",
+      "Jaccard similarity between document 2 and 6 is 0.01\n",
+      "Jaccard similarity between document 2 and 7 is 0.01\n",
+      "Jaccard similarity between document 2 and 8 is 0.01\n",
+      "Jaccard similarity between document 2 and 9 is 0.0\n",
+      "Jaccard similarity between document 3 and 4 is 0.02\n",
+      "Jaccard similarity between document 3 and 5 is 0.02\n",
+      "Jaccard similarity between document 3 and 6 is 0.01\n",
+      "Jaccard similarity between document 3 and 7 is 0.01\n",
+      "Jaccard similarity between document 3 and 8 is 0.0\n",
+      "Jaccard similarity between document 3 and 9 is 0.0\n",
+      "Jaccard similarity between document 4 and 5 is 0.26\n",
+      "Jaccard similarity between document 4 and 6 is 0.01\n",
+      "Jaccard similarity between document 4 and 7 is 0.01\n",
+      "Jaccard similarity between document 4 and 8 is 0.01\n",
+      "Jaccard similarity between document 4 and 9 is 0.0\n",
+      "Jaccard similarity between document 5 and 6 is 0.01\n",
+      "Jaccard similarity between document 5 and 7 is 0.0\n",
+      "Jaccard similarity between document 5 and 8 is 0.01\n",
+      "Jaccard similarity between document 5 and 9 is 0.0\n",
+      "Jaccard similarity between document 6 and 7 is 0.02\n",
+      "Jaccard similarity between document 6 and 8 is 0.01\n",
+      "Jaccard similarity between document 6 and 9 is 0.01\n",
+      "Jaccard similarity between document 7 and 8 is 0.01\n",
+      "Jaccard similarity between document 7 and 9 is 0.02\n",
+      "Jaccard similarity between document 8 and 9 is 0.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "jaccard_test()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-b240e89a046e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmin_hashing_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataWithIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_hashing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataWithIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhasher\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-aef65b8c5f21>\u001b[0m in \u001b[0;36mmin_hashing_test\u001b[0;34m(signatures_lists, min_hash_lists)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcouple\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msignatures_lists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mfirst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin_hash_lists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mcouple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0msecond\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin_hash_lists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mcouple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Similarity between \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcouple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" and \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcouple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\" is \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetSimilarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "min_hashing_test(dataWithIndex, min_hashing(dataWithIndex, hasher))"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
