--- a/Lab-1-LSH/LocalitySensitiveHashing.ipynb
+++ b/Lab-1-LSH/LocalitySensitiveHashing.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,39 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" \n",
-    " Create function Shingling that constructs k–shingles of a given length k (e.g., 10) from a given document, \n",
-    " computes a hash value for each unique shingle, and represents the document in the form of an ordered set of \n",
-    " its hashed k-shingles.\n",
+    "\"\"\"\n",
+    "    Given a shingle, returns its hashed value\n",
     "\"\"\"\n",
     "\n",
     "def hashShingling(shingle, mod=2 ** 32 - 1):\n",
-    "    \"\"\"\n",
-    "    Given a shingle, returns its hashed value\n",
-    "    the hash function is defined as below.\n",
-    "    hash(char) = val*26 + getAscii(char)%mod\n",
-    "\n",
-    "    :param shingle: input characters sequence\n",
-    "    :return val: hashed value for the string\n",
-    "    \"\"\"\n",
-    "\n",
     "    val = 0\n",
     "    for c in shingle:\n",
     "        val = (val * 26 + ord(c)) % mod\n",
     "    return val\n",
     "\n",
     "\n",
-    "\n",
-    "def get_shinglings(document, k):\n",
-    "    \"\"\"\n",
+    "\"\"\"\n",
     "    Get list of shinglings from a document as a list\n",
-    "    :param document: Document in form of String\n",
-    "    \"\"\"\n",
-    "\n",
+    "\"\"\"\n",
+    "def get_shinglings(document, k):\n",
     "    shinglings = []\n",
     "    for i in range(k - 1, len(document)):\n",
     "        shinglings.append(hashShingling(document[i - k + 1:i]))\n",
@@ -106,20 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "\"\"\"\n",
-    "Function MinHashing that builds a minHash signature (in the form of a vector or a set)\n",
-    "of a given length n from a given set of integers (a set of hashed shingles).\n",
-    "\"\"\"\n",
-    "\n",
     "class VectorWrapper():\n",
     "    def __init__(self, vector):\n",
     "        self.vector = vector\n",
+    "\n",
+    "\"\"\"\n",
+    "    The class Hasher contains all the useful functions to build a minHash signature (in the form of a vector)\n",
+    "    of a given length from a given set of integers (a set of hashed shingles).\n",
+    "\"\"\"\n",
     "\n",
     "class Hasher():\n",
     "    def __init__(self, signatures):\n",
@@ -143,15 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Class CompareSets:\n",
-    "It computes the Jaccard similarity of two sets of integers – two sets of hashed shingles.\n",
+    "    It computes the Jaccard similarity of two sets of integers – two sets of hashed shingles.\n",
     "\"\"\"\n",
-    "\n",
     "def computeJaccard(set1, set2):\n",
     "    #To be sure that the user inputted a set:\n",
     "    a = set(set1)\n",
@@ -159,12 +143,12 @@
     "\n",
     "    union = a.union(b)\n",
     "    intersection = a.intersection(b)\n",
-    "    return round(len(intersection)/len(union), 2)\n"
+    "    return round(len(intersection)/len(union), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,15 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "CompareSignatures: estimates similarity of two integer vectors – minhash signatures –\n",
-    "as a fraction of components, in which they agree.\n",
+    "    Estimates similarity of two integer vectors – minhash signatures –\n",
+    "    as a fraction of components, in which they agree.\n",
     "\"\"\"\n",
-    "\n",
     "def getSimilarity(list1, list2):\n",
     "    comparison = np.dstack((list1, list2))[0]\n",
     "    return len(list(filter(lambda x: x[0] == x[1], comparison))) / len(comparison)"
@@ -191,10 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "    Given a list of pairs of documents, it prints the min hashing similarities between these pairs.\n",
+    "\"\"\"\n",
     "def print_min_hashing_similarities(min_hash_lists, candidates):\n",
     "    for couple in candidates:\n",
     "        first = min_hash_lists.filter(lambda x: x[0]==couple[0]).collect()[0][1]\n",
@@ -202,7 +188,7 @@
     "        print(\"Similarity between \"+str(couple[0])+\" and \"+str(couple[1])+\" is \"+str(getSimilarity(first, second)))\n",
     "\n",
     "\"\"\"\n",
-    "    ....\n",
+    "    Generates the list of signatures for each document.\n",
     "\"\"\"\n",
     "def min_hashing(signature_lists, hasher):\n",
     "    min_hash_lists = signature_lists.map(lambda x: (x[0], hasher.generateSignatures(x[1])))\n",
@@ -211,29 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Bonus task:\n",
-    "Class LSH that implements the LSH technique: given a collection of minhash signatures\n",
-    "(integer vectors) and a similarity threshold t, the LSH class (using banding and hashing)\n",
-    "finds all candidate pairs of signatures that agree on at least fraction t of their components.\n",
+    "    Computes an hash value given a vector. \n",
     "\"\"\"\n",
-    "\n",
-    "\n",
-    "\n",
     "def vectorHash(vector):\n",
-    "    \"\"\"\n",
-    "    Computes an hash value given a vector\n",
-    "    :return: hashed value  \"\"\"\n",
     "    return np.sum(vector) % (2 ** 32 - 1)\n",
     "\n",
+    "\"\"\"\n",
+    "    Given a bucket, generate all the possible pairs of candidates for that bucket. \n",
+    "\"\"\"\n",
     "def generateCandidates(vector):\n",
-    "    \"\"\"\n",
-    "    Given a vector, states whether it is a candidate or not\n",
-    "    \"\"\"\n",
+    "\n",
     "    candidates = []\n",
     "    for x in vector:\n",
     "        for y in vector:\n",
@@ -241,9 +219,10 @@
     "                candidates.append((x[0], y[0]))\n",
     "    return candidates\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "\"\"\"\n",
+    "    Given a collection of minhash signatures (integer vectors) and a similarity threshold t, the functions (using banding and hashing)\n",
+    "    finds all candidate pairs of signatures that agree on at least fraction t of their components and print their similarities.\n",
+    "\"\"\"\n",
     "def lsh_test(doc_num, min_hash_lists):\n",
     "    \n",
     "    # Computer threshold from given bands_num and signatures\n",
@@ -284,18 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3 funzioni\n",
-    "\n",
-    "# data = [ [3214, 31431, 134134, ...], [...]]\n",
-    "\n",
     "\"\"\"\n",
-    "    Computes the Jaccard Similarity for each document\n",
-    "    documents are already split in hash shingles and saved \n",
-    "    global vsriable data\n",
+    "    Compute the jaccard similarities between all the documents\n",
     "\"\"\"\n",
     "def jaccard_test():\n",
     "    for i in range(len(data)):\n",
@@ -303,10 +276,7 @@
     "            print(\"Jaccard similarity between document {} and {} is {}\".format(i, j, computeJaccard(data[i], data[j])))\n",
     "    \n",
     "\"\"\"\n",
-    "    Computes the MinHashing Similarity for each document\n",
-    "    global vsriable ...\n",
-    "    signatures_lists = datawithindex...\n",
-    "    \n",
+    "    Computes the approximate Jaccard similarities with min hashing between all the documents \n",
     "\"\"\"\n",
     "def min_hashing_test(signatures_lists, min_hash_lists):\n",
     "    \n",
@@ -315,20 +285,21 @@
     "        for j in range(i+1, len(data)):\n",
     "            candidates.append((i, j))\n",
     "    \n",
-    "    print_min_hashing_similarities(min_hash_lists, candidates)\n",
-    "    \n",
-    "    \n",
-    "# min-hashing senza lsh con i 10 documenti\n"
+    "    print_min_hashing_similarities(min_hash_lists, candidates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create class shinglings to convert document into shingles and then into number\n",
     "shinglingSize = 7\n",
+    "\n",
+    "# Create function Shingling that constructs k–shingles of a given length shinglingSize, from each document, \n",
+    "# computes a hash value for each unique shingle, and represents the document in the form of an ordered set of \n",
+    "# its hashed shinglingSize-shingles.\n",
     "\n",
     "data = []\n",
     "for d in range(numberOfDocuments):\n",
@@ -414,10 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# retrieves the list of signatures for each document.\n",
     "min_hash_lists = min_hashing(dataWithIndex, hasher)"
    ]
   },
@@ -479,13 +451,13 @@
     }
    ],
    "source": [
-    "# computer the approximate Jaccard similarities with min hashing between all the documents\n",
+    "# computes the approximate Jaccard similarities with min hashing between all the documents\n",
     "min_hashing_test(dataWithIndex, min_hash_lists )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +475,12 @@
       "Which threshold would you like to select? Please insert their index id:5\n",
       "Threshold is set to 0.5493\n",
       "Candidates are: [(8, 9)]\n",
-      "Similarity between 8 and 9 is 0.57\n"
+      "Similarity between 8 and 9 is 0.58\n"
      ]
     }
    ],
    "source": [
-    "# computer the approximate Jaccard similarities with min hashing between all the pairs of documents that are likely to have a similarity higher than the chosen treshold\n",
+    "# computes the approximate Jaccard similarities with min hashing between all the pairs of documents that are likely to have a similarity higher than the chosen treshold\n",
     "lsh_test(numberOfDocuments, min_hash_lists )"
    ]
   },
