--- a/Lab-1-LSH/LocalitySensitiveHashing.ipynb
+++ b/Lab-1-LSH/LocalitySensitiveHashing.ipynb
@@ -117,12 +117,15 @@
     "    def hashValue(self, value, signature):\n",
     "        return (value*self.coefficient[signature]+self.bias[signature])%self.mod[signature]\n",
     "    \n",
+    "    # Compute hash of each element of a vector (vectorizing operation)\n",
     "    def hashVector(self, vector, signature):\n",
     "        return np.vectorize(self.hashValue)(vector, signature)\n",
     "    \n",
+    "    # gets minimum of the (hashed) values in the vector given\n",
     "    def minHashVector(self, signature, vectorWrapper):\n",
     "        return np.amin(self.hashVector(vectorWrapper.vector, signature))\n",
     "    \n",
+    "    # given a vector, returns the min-hash for all possible elements. \n",
     "    def generateSignatures(self, vector):\n",
     "        return np.vectorize(self.minHashVector)(np.arange(self.signatures), VectorWrapper(vector))"
    ]
@@ -211,7 +214,6 @@
     "    Given a bucket, generate all the possible pairs of candidates for that bucket. \n",
     "\"\"\"\n",
     "def generateCandidates(vector):\n",
-    "\n",
     "    candidates = []\n",
     "    for x in vector:\n",
     "        for y in vector:\n",
@@ -225,7 +227,7 @@
     "\"\"\"\n",
     "def lsh_test(doc_num, min_hash_lists):\n",
     "    \n",
-    "    # Computer threshold from given bands_num and signatures\n",
+    "    # Computes threshold from given bands_num and signatures\n",
     "    def getThreshold(signatures, bands_num):\n",
     "        return np.round((1 / bands_num) ** (bands_num / signatures),4)\n",
     "        \n",
@@ -236,7 +238,7 @@
     "            \n",
     "    for i in range(len(possible_bands)):\n",
     "        print(\"{}: {}\".format(i, getThreshold(signatures, possible_bands[i])))\n",
-    "    choice = int(input(\"Which threshold would you like to select? Please insert their index id:\") )\n",
+    "    choice = int(input(\"Which threshold would you like to select? Please insert the index id:\") )\n",
     "    # TODO catch errors\n",
     "    \n",
     "    bands_num = possible_bands[choice]\n",
@@ -244,13 +246,24 @@
     "    print(\"Threshold is set to \" + str(getThreshold(signatures, bands_num)))\n",
     "\n",
     "    # Create a tuples having as elements (bandId, (documentId, hashOverTheBand))\n",
+    "    \n",
+    "    # [1,2,3,4,5.... num_bands]\n",
     "    bands0 = min_hash_lists.flatMap(lambda x: np.arange(bands_num))\n",
+    "    # [1,1, ..... 1] , len = num_bands\n",
     "    bands1 = min_hash_lists.flatMap(lambda x: np.ones(bands_num, dtype=int) * x[0])\n",
+    "    # split in num_bands same length parts the dataset\n",
     "    bands2 = min_hash_lists.flatMap(lambda x: np.array(np.split(x[1], bands_num)))\n",
+    "    \n",
+    "    # get hash of vectors created (bands)\n",
     "    bands2Hashed = bands2.map(lambda x: vectorHash(x))\n",
+    "    \n",
+    "    # create couples (1, hashed_vector1), (1, hashed_vector2), ...\n",
     "    bands12Hashed = bands1.zip(bands2Hashed)\n",
+    "    \n",
+    "    # create couples (1,(1, hashed_vector1)), (2,(1, hashed_vector2)), ...\n",
     "    bands = bands0.zip(bands12Hashed)\n",
     "\n",
+    "    # for each bend, I have all possible buck\n",
     "    bandsInGroup = bands.groupByKey()\n",
     "\n",
     "    candidates = bandsInGroup.flatMap(lambda x: generateCandidates(x[1])).map(\n",
@@ -316,9 +329,7 @@
     "\n",
     "# create RDD and create LSH class\n",
     "dataRDD = sc.parallelize(data)\n",
-    "dataWithIndex = dataRDD.zipWithIndex().map(lambda x: (x[1], x[0]))\n",
-    "\n",
-    "\n"
+    "dataWithIndex = dataRDD.zipWithIndex().map(lambda x: (x[1], x[0]))"
    ]
   },
   {
@@ -508,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
