fixed eigenvector selection

--- a/Lab-4-GraphSpectra/GraphSpectra.ipynb
+++ b/Lab-4-GraphSpectra/GraphSpectra.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,7 @@
     "    def __init__(self, path, is_undirected=False):\n",
     "        self.path = path\n",
     "        self.is_undirected = is_undirected\n",
+    "        self.dict_inv = {}\n",
     "\n",
     "    def read_graph(self):\n",
     "        \"\"\"\n",
@@ -114,10 +115,11 @@
     "        dict_nodes_id = {}\n",
     "        for el in list(set(nodes)):\n",
     "            dict_nodes_id[el] = new_id\n",
+    "            self.dict_inv[new_id] = el\n",
     "            new_id+=1\n",
     "\n",
     "        myGraph = Graph(len(nodes))\n",
-    "        for el in edges[:-1]:\n",
+    "        for el in edges:#[:-1]:\n",
     "            curr_edge = Edge(Node(dict_nodes_id[el[0]]), Node(dict_nodes_id[el[1]]))\n",
     "            myGraph.add_edge(curr_edge)\n",
     "\n",
@@ -131,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"example1.txt\"\n",
-    "graph_reader = GraphReader(path)\n",
+    "path = \"input.txt\"\n",
+    "graph_reader = GraphReader(path, True)\n",
     "graph = graph_reader.read_graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,27 +160,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.37796447 0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.33333333 0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.30151134 ... 0.         0.         0.        ]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.70710678 0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.35355339 0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         1.        ]]\n"
+      "[[0. 1. 1. 0. 0. 0. 1. 1. 0.]\n",
+      " [1. 0. 1. 0. 0. 1. 1. 1. 0.]\n",
+      " [1. 1. 0. 0. 0. 0. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 1. 1. 0. 0. 1.]\n",
+      " [0. 0. 0. 1. 0. 1. 0. 0. 1.]\n",
+      " [0. 1. 0. 1. 1. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 1. 1. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 1. 1. 0. 0. 0.]]\n",
+      "[[4. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 5. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 4. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 3. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 3. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 4. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 4. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 4. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5        0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.4472136  0.         0.         0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.         0.5        0.         0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.57735027 0.         0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.57735027 0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.5\n",
+      "  0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.5        0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.5        0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.         0.57735027]]\n"
      ]
     }
    ],
@@ -192,20 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.12598816 0.11396058 ... 0.         0.         0.        ]\n",
-      " [0.12598816 0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.11396058 0.         0.         ... 0.         0.         0.        ]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n"
+      "[[0.         0.2236068  0.25       0.         0.         0.\n",
+      "  0.25       0.25       0.        ]\n",
+      " [0.2236068  0.         0.2236068  0.         0.         0.2236068\n",
+      "  0.2236068  0.2236068  0.        ]\n",
+      " [0.25       0.2236068  0.         0.         0.         0.\n",
+      "  0.25       0.25       0.        ]\n",
+      " [0.         0.         0.         0.         0.33333333 0.28867513\n",
+      "  0.         0.         0.33333333]\n",
+      " [0.         0.         0.         0.33333333 0.         0.28867513\n",
+      "  0.         0.         0.33333333]\n",
+      " [0.         0.2236068  0.         0.28867513 0.28867513 0.\n",
+      "  0.         0.         0.28867513]\n",
+      " [0.25       0.2236068  0.25       0.         0.         0.\n",
+      "  0.         0.25       0.        ]\n",
+      " [0.25       0.2236068  0.25       0.         0.         0.\n",
+      "  0.25       0.         0.        ]\n",
+      " [0.         0.         0.         0.33333333 0.33333333 0.28867513\n",
+      "  0.         0.         0.        ]]\n"
      ]
     }
    ],
@@ -218,17 +270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30.00706056 22.01018227 21.01469358 20.00844372 19.01160345 18.07727973\n",
-      " 17.95087686 17.10816411 16.92502961 17.00938295 16.02345326 15.023974\n",
-      " 15.00664921 14.04640492 14.03233761 14.02322388 14.01636913 14.01170491\n",
-      " 13.16453751  1.97386082]\n"
+      "[ 1.          0.90664812 -0.06486199 -0.42511946 -0.25       -0.25\n",
+      " -0.33333333 -0.25       -0.33333333]\n"
      ]
     }
    ],
@@ -236,34 +286,50 @@
     "# Eigenpair\n",
     "from numpy import linalg as LA\n",
     "eigenval, eigenvect = LA.eig(L)\n",
-    "print(eigenval[:20])"
+    "print(eigenval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.34299717  0.2927103 ]\n",
+      " [ 0.38348249  0.20505869]\n",
+      " [ 0.34299717  0.2927103 ]\n",
+      " [ 0.29704426 -0.40826537]\n",
+      " [ 0.29704426 -0.40826537]\n",
+      " [ 0.34299717 -0.33939922]\n",
+      " [ 0.34299717  0.2927103 ]\n",
+      " [ 0.34299717  0.2927103 ]\n",
+      " [ 0.29704426 -0.40826537]]\n"
+     ]
+    }
+   ],
    "source": [
     "# get matrix X of largest k eigenvalues' eigenvectors\n",
-    "k = 19\n",
-    "X = eigenvect[:k]\n",
-    "Y = normalize(X, norm='l2')"
+    "k = 3\n",
+    "X = eigenvect[:,:k]\n",
+    "Y = X#normalize(X, norm='l2')\n",
+    "print(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0],\n",
-       "      dtype=int32)"
+       "array([1, 1, 1, 0, 0, 0, 1, 1, 0], dtype=int32)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,30 +339,56 @@
     "from sklearn.cluster import KMeans\n",
     "import numpy as np\n",
     "\n",
-    "kmeans = KMeans(n_clusters=2, random_state=0).fit(Y)\n",
+    "n_clusters = k\n",
+    "kmeans = KMeans(n_clusters=n_clusters , random_state=0).fit(Y)\n",
     "kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_with_clusters = kmeans.predict(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0],\n",
-       "      dtype=int32)"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "[[4, 5, 6, 13], [1, 2, 3, 11, 12]]\n"
+     ]
     }
    ],
    "source": [
-    "kmeans.predict(Y)"
+    "clusters = [[] for i in range(n_clusters )]\n",
+    "for i in range(len(nodes_with_clusters)):\n",
+    "    print(graph_reader.dict_inv[i])\n",
+    "    clusters[nodes_with_clusters[i]].append(graph_reader.dict_inv[i])\n",
+    "print(clusters)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -322,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
